Initial commit for CustomOTPView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,9 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.an.otpview"
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
