Add changes to incorporate bintray upload

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,30 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'CustomOTPView'
+    bintrayName = 'CustomOTPView'
+
+    publishedGroupId = 'com.an.otpview'
+    libraryName = 'CustomOTPView'
+    artifact = 'CustomOTPView'
+    artifactId = 'CustomOTPView'
+
+    libraryDescription = 'A custom view class to enter a four digit code which is used often these days for authentication.'
+
+    siteUrl = 'https://github.com/anitaa1990/otpview'
+    gitUrl = 'https://github.com/anitaa1990/otpview'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'developerId'
+    developerName = 'Anitaa Murthy'
+    developerEmail = 'murthyanitaa@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
@@ -26,3 +51,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
 }
+
+
+//Add these lines to publish library to bintray. This is the readymade scripts made by github user nuuneoi to make uploading to bintray easy.
+//Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
